# sakuramangas-dl

./: .env.example  .gitignore  README.md  main.py  mapping.toml  mapping.toml.example  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  claude.yml  drive_ingest.yml
docs/: GITHUB_ACTIONS_ARCHITECTURE.md
src/: main.py
src/core/: anti_ban.py  cli.py  manga_manager.py  network_utils.py  scraper.py  utils.py
